<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kakyenlam.friendfinder.ScheduleMeeting"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/endTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/end_time_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeEditField" />

    <Button
        android:id="@+id/inviteFriendEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_invite"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintLeft_toRightOf="@+id/inviteListEdit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeEditButton" />

    <TextView
        android:id="@+id/startTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_time_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEditField" />

    <TextView
        android:id="@+id/editMeetingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Edit Meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/meetingTitleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editMeetingTitle" />

    <EditText
        android:id="@+id/meetingEditTitleField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintLeft_toLeftOf="@+id/meetingTitleDisplay"
        app:layout_constraintTop_toBottomOf="@+id/meetingTitleDisplay" />

    <TextView
        android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meetingLocationEditField" />

    <Button
        android:id="@+id/editMeetingBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/back"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintLeft_toRightOf="@+id/comfirmMeetingChangeButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeInviteEditButton" />

    <Button
        android:id="@+id/startTimeEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="34dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/select_start_time"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintLeft_toRightOf="@+id/startTimeEditField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationEditButton" />

    <Button
        android:id="@+id/endTimeEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_end_time"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintLeft_toRightOf="@+id/endTimeEditField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeEditButton" />

    <TextView
        android:id="@+id/dateEditField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintLeft_toLeftOf="@+id/dateDisplay"
        app:layout_constraintTop_toBottomOf="@+id/dateDisplay" />

    <TextView
        android:id="@+id/startTimeEditField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/startTimeDisplay"
        app:layout_constraintTop_toBottomOf="@+id/startTimeDisplay" />

    <TextView
        android:id="@+id/endTimeEditField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/endTimeDisplay"
        app:layout_constraintTop_toBottomOf="@+id/endTimeDisplay" />

    <Button
        android:id="@+id/confirmMeetingChangeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/confirm_change"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeInviteEditButton" />

    <TextView
        android:id="@+id/inviteListDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/invite_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeEditField" />

    <TextView
        android:id="@+id/newLocationDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meetingEditTitleField" />

    <TextView
        android:id="@+id/meetingLocationEditField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/newLocationDisplay"
        app:layout_constraintTop_toBottomOf="@+id/newLocationDisplay" />

    <Button
        android:id="@+id/locationEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="108dp"
        android:text="@string/select_location"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintLeft_toRightOf="@+id/meetingLocationEditField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeInviteEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/remove_invite"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintLeft_toRightOf="@+id/inviteListEdit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteFriendEditButton" />

    <ListView
        android:id="@+id/inviteListEdit"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inviteListDisplay" />

</android.support.constraint.ConstraintLayout>
