<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kakyenlam.friendfinder.ScheduleMeeting"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/endTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/end_time_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeInput" />

    <Button
        android:id="@+id/addInviteScheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_invite"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintLeft_toRightOf="@+id/inviteListInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeButton" />

    <TextView
        android:id="@+id/startTimeDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/start_time_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateScheduleView" />

    <TextView
        android:id="@+id/scheduleMeetingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Schedule New Meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/meetingTitleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/title_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scheduleMeetingTitle" />

    <EditText
        android:id="@+id/meetingTitleInput"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meetingTitleDisplay" />

    <TextView
        android:id="@+id/dateDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/date_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newLocationField" />

    <Button
        android:id="@+id/scheduleMeetingBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/removeInviteScheduleButton" />

    <Button
        android:id="@+id/startTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="64dp"
        android:text="@string/select_start_time"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintLeft_toRightOf="@+id/startTimeInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationNewButton" />

    <Button
        android:id="@+id/endTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/select_end_time"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintLeft_toRightOf="@+id/endTimeInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeButton" />

    <TextView
        android:id="@+id/dateScheduleView"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="-1dp"
        app:layout_constraintLeft_toLeftOf="@+id/dateDisplay"
        app:layout_constraintTop_toBottomOf="@+id/dateDisplay" />

    <TextView
        android:id="@+id/startTimeInput"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/startTimeDisplay"
        app:layout_constraintTop_toBottomOf="@+id/startTimeDisplay" />

    <TextView
        android:id="@+id/endTimeInput"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/endTimeDisplay"
        app:layout_constraintTop_toBottomOf="@+id/endTimeDisplay" />

    <Button
        android:id="@+id/createMeetingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Create Meeting"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/removeInviteScheduleButton" />

    <TextView
        android:id="@+id/inviteListDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/invite_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeInput" />

    <ListView
        android:id="@+id/inviteListInput"
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/inviteListDisplay"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/inviteListDisplay" />

    <TextView
        android:id="@+id/newLocationDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/location_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meetingTitleInput" />

    <TextView
        android:id="@+id/newLocationField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/newLocationDisplay"
        app:layout_constraintTop_toBottomOf="@+id/newLocationDisplay" />

    <Button
        android:id="@+id/locationNewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="116dp"
        android:text="@string/select_location"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintLeft_toRightOf="@+id/newLocationField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/removeInviteScheduleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:text="@string/remove_invite"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintLeft_toRightOf="@+id/inviteListInput"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addInviteScheduleButton" />

</android.support.constraint.ConstraintLayout>
