<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kakyenlam.friendfinder.MeetingDetails">

    <TextView
        android:id="@+id/meetingDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Meeting Details"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/meetingTitleDetailsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meetingDetailsTitle" />

    <TextView
        android:id="@+id/meetingTitleView"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Title"
        app:layout_constraintLeft_toLeftOf="@+id/meetingTitleDetailsDisplay"
        app:layout_constraintTop_toBottomOf="@+id/meetingTitleDetailsDisplay" />

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationDetailsField" />

    <TextView
        android:id="@+id/dateDetailsField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="Date"
        app:layout_constraintLeft_toLeftOf="@+id/Date"
        app:layout_constraintTop_toBottomOf="@+id/Date" />

    <TextView
        android:id="@+id/startTimeDetailsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/start_time_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateDetailsField" />

    <TextView
        android:id="@+id/startTimeDetailsField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="Start Time"
        app:layout_constraintLeft_toLeftOf="@+id/startTimeDetailsDisplay"
        app:layout_constraintTop_toBottomOf="@+id/startTimeDetailsDisplay" />

    <TextView
        android:id="@+id/endTimeDetailsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/end_time_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTimeDetailsField" />

    <TextView
        android:id="@+id/endTimeDetailsField"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="End Time"
        app:layout_constraintLeft_toLeftOf="@+id/endTimeDetailsDisplay"
        app:layout_constraintTop_toBottomOf="@+id/endTimeDetailsDisplay" />

    <TextView
        android:id="@+id/inviteListDetailsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/invite_list"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endTimeDetailsField" />

    <ListView
        android:id="@+id/inviteListDetails"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/inviteListDetailsDisplay"
        app:layout_constraintTop_toBottomOf="@+id/inviteListDetailsDisplay" />

    <Button
        android:id="@+id/editMeetingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/deleteMeetingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="52dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/editMeetingButton" />

    <Button
        android:id="@+id/meetingDetailsBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.818"
        app:layout_constraintLeft_toRightOf="@+id/deleteMeetingButton"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/LocationDetailsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/location_meeting"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meetingTitleView" />

    <TextView
        android:id="@+id/locationDetailsField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="@+id/LocationDetailsDisplay"
        app:layout_constraintTop_toBottomOf="@+id/LocationDetailsDisplay" />

</android.support.constraint.ConstraintLayout>
