<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kakyenlam.friendfinder.EditFriend">

    <TextView
        android:id="@+id/titleDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit Friend"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageEditView"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/screen_background_dark_transparent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/titleDisplay" />

    <Button
        android:id="@+id/changePhotoEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageEditView"
        android:layout_marginLeft="132dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/changeDateEditButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/birthdayEditDisplay"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <Button
        android:id="@+id/editFriendBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="23dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginRight="16dp" />

    <Button
        android:id="@+id/editFriendConfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/confirm_change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/birthdayEditDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday_friend"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/changePhotoEditButton"
        android:layout_marginLeft="109dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/birthdayEditField"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/birthdayEditDisplay"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/changePhotoEditButton" />
</android.support.constraint.ConstraintLayout>
